syntax = "proto3";

package inventory;
option go_package = "/proto/inventory;inventory";

message Item {
  string product_id = 1;
  int32 quantity = 2;
}

message InventoryCheckRequest {
  repeated Item items = 1;
}

message InventoryCheckResponse {
  bool available = 1;
}

service InventoryService {
  rpc CheckInventory(InventoryCheckRequest) returns (InventoryCheckResponse);
}
